--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-qr-scanner": "^1.0.0-alpha.7",
+    "react-qr-reader": "^2.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
